# study-windows-kernel

./: .gitignore  CMakeLists.txt  README.md  study-windows-kernel.sln  todos.json
CharacterProcessing/: CharacterProcessing.cpp  CharacterProcessing.vcxproj.filters
Common/: CmnHdr.h
cmake_modules/: compile_template.cmake  utils.cmake
dll_injection_tool/: dll_injection_tool.aps  dll_injection_tool.vcxproj.filters
injecttion_dll/: injecttion_dll.rc
project/dll/dll_injection_tool/: Resource.h  dll_injection_tool.cpp  dll_injection_tool.rc  dll_injection_tool.vcxproj
project/dll/injecttion_dll/: dllmain.cpp  injecttion_dll.aps  injecttion_dll.h  injecttion_dll.vcxproj  injecttion_dll.vcxproj.filters  resource.h
project/socket/socket_nonblocking/: socket_nonblocking.cpp  socket_nonblocking.vcxproj  socket_nonblocking.vcxproj.filters
project/socket/socket_primer_c/: socket_primer_c.cpp  socket_primer_c.vcxproj  socket_primer_c.vcxproj.filters
project/socket/socket_primer_s/: socket_primer_s.cpp  socket_primer_s.vcxproj  socket_primer_s.vcxproj.filters
project/string/: CharacterProcessing.vcxproj
socket_nonblocking/: nbserver.cpp  socket_nonblocking.cpp  socket_nonblocking.vcxproj
src/common_header/: CmnHdr.h  Toolhelp.h
src/dll/dynamic_link_library/: CMakeLists.txt  README.md  dynamic_link_library.cpp
src/dll/test_dll/: DelayLoadApp.cpp
src/dll/test_lib/: DelayLoadLib.cpp
src/fs/recover/: CMakeLists.txt  app.cc
src/gdi/imgconverter/: app.cc
src/hook/api_interception/: apihook.cpp  apihook.h  apihooklib.cpp  apihooklib.h  dllmain.cpp  sndcopymsg.h
src/hook/dll_hijacking_new/: CMakeLists.txt  dll_hijacking_new.cpp  dll_hijacking_new.hpp
src/hook/dll_hijacking_org/: CMakeLists.txt  dll_hijacking_org.cpp  dll_hijacking_org.hpp
src/hook/imgwalk/: CMakeLists.txt  imgwalk.cpp
src/hook/injection/: CMakeLists.txt  CmnHdr.h  injection.aps  injection.cpp  injection.rc  resource.h
src/hook/keyboardhook/: CMakeLists.txt  keyboardhook.cpp
src/hook/libscreenusetime/: lib.cc
src/hook/msgbox_hook/: CMakeLists.txt  msgboxinfo.aps  msgboxinfo.cpp  msgboxinfo.rc  resource.h
src/hook/screen_use_time/: CMakeLists.txt  app.cc
src/ipc/namepipesync/: CMakeLists.txt  REF.md  app.cc
src/process/JobMon/: CMakeLists.txt
src/process/resource_limit/: CMakeLists.txt  main.cc
src/sndmsg_death_lock/: CMakeLists.txt  sndmsg_death_lock.cc
src/socket/hello_socket_client/: CMakeLists.txt  hello_socket_client.cc
src/socket/hello_socket_server/: hello_socket_server.cc
src/utilities/asciitokml/: app.cc
src/utilities/encryption/: CMakeLists.txt  core.cc  core.hpp  encryption.cc
src/utilities/sticky/: CMakeLists.txt  app.cc
src/utilities/todolist/: app.cc  core.cc  core.hpp
study_windows_kernel/dynamic_link_library/: CMakeLists.txt  README.md  dynamic_link_library.cpp
study_windows_kernel/image_walk/: CMakeLists.txt  ImgWalk.cpp
study_windows_kernel/inject_library/: CMakeLists.txt  InjLib.cpp
study_windows_kernel/test_dll/: CMakeLists.txt  DelayLoadApp.cpp
study_windows_kernel/test_lib/: CMakeLists.txt
