set(BUILD_SHARED_LIBS TRUE)
BuildTarget(FALSE)
target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32 _DEBUG _WINDOWS _USRDLL)
message(STATUS "PROJECT_NAME=${PROJECT_NAME}")
message(STATUS "test_dll_BINARY_DIR=${test_dll_BINARY_DIR}")

# install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${test_dll_BINARY_DIR})