BuildTarget(TRUE)
# add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
#   COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_PROPERTY:${PROJECT_NAME},WIN32_EXECUTABLE> $<TARGET_FILE_DIR:${PROJECT_NAME}>
#   COMMAND_EXPAND_LISTS
#   )
# target_link_libraries(${PROJECT_NAME} test_lib)
target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32 _DEBUG _WINDOWS _UNICODE UNICODE)
# set_target_properties()

message(STATUS "PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR}")